[gd_scene load_steps=15 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/home.png" type="Texture" id=2]
[ext_resource path="res://assets/tube_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/dialog_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/next_level.png" type="Texture" id=5]
[ext_resource path="res://dialog.gd" type="Script" id=6]
[ext_resource path="res://assets/tube_plus.png" type="Texture" id=7]
[ext_resource path="res://assets/tube_plus_disable.png" type="Texture" id=8]
[ext_resource path="res://assets/reset.png" type="Texture" id=9]
[ext_resource path="res://assets/shop.png" type="Texture" id=10]
[ext_resource path="res://assets/gift.png" type="Texture" id=11]
[ext_resource path="res://assets/arial.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/next_level_disable.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 12 )

[node name="Container" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 360.0
margin_bottom = 700.0
mouse_filter = 2
color = Color( 0.945098, 0.811765, 0.737255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TubeRect" type="TextureRect" parent="."]
margin_top = 134.0
margin_right = 360.0
margin_bottom = 586.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Home" type="TextureButton" parent="."]
margin_left = 18.5017
margin_top = 20.0
margin_right = 97.5017
margin_bottom = 94.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="TextureButton" parent="."]
margin_left = 288.646
margin_top = 17.9453
margin_right = 375.646
margin_bottom = 100.945
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gift" type="TextureRect" parent="."]
margin_left = 62.5084
margin_top = 88.4652
margin_right = 350.508
margin_bottom = 148.465
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="TextureButton" parent="."]
margin_left = 82.1593
margin_top = 614.322
margin_right = 165.159
margin_bottom = 697.322
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TubePlus" type="TextureButton" parent="."]
margin_left = 212.542
margin_top = 613.458
margin_right = 296.542
margin_bottom = 698.458
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Dialog" type="Control" parent="InterfaceLayer"]
margin_right = 360.0
margin_bottom = 700.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dim" type="ColorRect" parent="InterfaceLayer/Dialog"]
margin_right = 360.0
margin_bottom = 700.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="InterfaceLayer/Dialog"]
margin_left = 11.0
margin_top = 131.0
margin_right = 351.0
margin_bottom = 578.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="InterfaceLayer/Dialog/Container"]
margin_right = 340.0
margin_bottom = 447.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="InterfaceLayer/Dialog/Container"]
margin_left = 52.771
margin_top = 361.538
margin_right = 139.771
margin_bottom = 442.538
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="TextureButton" parent="InterfaceLayer/Dialog/Container"]
margin_left = 146.319
margin_top = 361.31
margin_right = 417.319
margin_bottom = 443.31
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InterfaceLayer/Dialog/Container"]
margin_left = 103.696
margin_top = 247.944
margin_right = 234.696
margin_bottom = 317.944
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="InterfaceLayer/Dialog"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Ball_tween_completed"]
[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="TubePlus" to="." method="_on_TubePlus_pressed"]
[connection signal="pressed" from="InterfaceLayer/Dialog/Container/Home" to="InterfaceLayer/Dialog" method="_on_Home_pressed"]
[connection signal="pressed" from="InterfaceLayer/Dialog/Container/NextLevel" to="InterfaceLayer/Dialog" method="_on_NextLevel_pressed"]
[connection signal="tween_all_completed" from="InterfaceLayer/Dialog/Tween" to="InterfaceLayer/Dialog" method="_on_tween_all_completed"]
